[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
multer = "2.1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "macros", "chrono"] }  # Added "chrono" feature
dotenvy = "0.15"
mime = "0.3"
axum-extra = { version = "0.9", features = ["multipart"] }


futures-util = "0.3"
thiserror = "1.0"



